--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "tsc --noEmit && eslint . --ext .ts,.tsx --max-warnings=0",
+    "lint": "tsc --noEmit && npx tsc --noEmit --project cypress/tsconfig.json && eslint . --ext .ts,.tsx --max-warnings=1",
     "test": "jest",
     "test:e2e": "cypress run",
     "test:e2e:report": "rimraf cypress/reports && cypress run",
@@ -49,6 +49,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "eslint-plugin-cypress": "^5.2.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "node-mocks-http": "^1.17.2",
