exclude /coverage folder from lint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,8 @@
     "cypress/**",
     "**/__tests__",
     "**/*.test.ts",
-    "**/*.test.tsx"
+    "**/*.test.tsx",
+    "coverage"
   ],
   "include": [
     "next-env.d.ts",
