--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "tsc --noEmit && npx tsc --noEmit --project cypress/tsconfig.json && eslint . --ext .ts,.tsx --max-warnings=1",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:e2e": "cypress run",
-    "test:e2e:report": "rimraf cypress/reports && cypress run",
+    "test:e2e": "cypress run --e2e --browser chrome",
+    "test:e2e:report": "rimraf cypress/reports && cypress run --e2e --browser chrome",
     "seed": "ts-node -O \"{\\\"module\\\":\\\"commonjs\\\"}\" scripts/seed.ts"
   },
   "dependencies": {
