--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "incremental": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "ignoreDeprecations": "5.0",
     "paths": {
       "@/*": [
         "./src/*"
@@ -39,9 +40,6 @@
   "exclude": [
     "node_modules",
     "cypress/**",
-    "**/__tests__",
-    "**/*.test.ts",
-    "**/*.test.tsx",
     "coverage"
   ],
   "include": [
