--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,4 @@
 services:
-  mongodb:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-
   app:
     build:
       context: .
@@ -14,11 +7,48 @@ services:
       - "3000:3000"
     environment:
       - DATABASE_URL=mongodb://mongodb:27017/next-todo-app
-      - JWT_ACCESS_SECRET=your_secret_key_here
+      - JWT_ACCESS_SECRET=prod_secret_key_change_me
       - JWT_ACCESS_TTL_SECONDS=3600
       - NODE_ENV=production
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
+    networks:
+      - todo-network
+
+  mongodb:
+    image: mongo:4.0
+    container_name: mongodb_4
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    healthcheck:
+      test: "mongo --eval 'db.runCommand({ping:1}).ok' --quiet"
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - todo-network
+
+  seed:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: builder
+    environment:
+      - DATABASE_URL=mongodb://mongodb:27017/next-todo-app
+      - NODE_ENV=development
+    depends_on:
+      mongodb:
+        condition: service_healthy
+    networks:
+      - todo-network
+    command: pnpm seed:db
+
+networks:
+  todo-network:
+    driver: bridge
 
 volumes:
   mongodb_data:
