--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,19 @@
 				"$tsc-watch"
 			],
 			"group": "test"
+		},
+		{
+			"label": "Run Jest Tests",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"test"
+			],
+			"group": {
+				"kind": "test",
+				"isDefault": true
+			},
+			"problemMatcher": "$jest-hint"
 		}
 	]
 }
